[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-common"
version = "0.2.0"
description = "Shared observability and middleware for AI-Trading-APP services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "structlog>=24.1.0",
  "fastapi>=0.110.0",
  "starlette>=0.36.0",
  "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
sentry = ["sentry-sdk[fastapi,sqlalchemy]>=2.0.0"]
ratelimit = ["slowapi>=0.1.9"]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["ai_trading_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
