[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-common"
version = "0.2.2"
description = "Shared observability and middleware for AI-Trading-APP services"
readme = "README.md"
requires-python = ">=3.11"
# Loose floors — the modules use only stable surface area
# (FastAPI/APIRouter/Request, Starlette BaseHTTPMiddleware, JSONResponse).
# Services pin their own fastapi version; we shouldn't fight them.
dependencies = [
  "structlog>=24.1.0",
  "fastapi>=0.100.0",
  "starlette>=0.27.0",
  "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
sentry = ["sentry-sdk[fastapi,sqlalchemy]>=2.0.0"]
ratelimit = ["slowapi>=0.1.9"]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["ai_trading_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
